# src/application/routers/users.routers.ts
@@ -19,5 +19,10 @@ export default class UsersRouters {
                 res.status(value.code).send(value);
             });
         });
+        this.router.patch('/:id/avatar', async (req, res) => {
+            this.controller.updateAvatar(req.params.id, req).then((value) => {
+                res.status(value.code).send(value);
+            });
+        });
     }
 }
